# disc_similarity

./: .gitignore  LICENSE  README.md  feature_de.csv  main.py  pyproject.toml
disc_similarity/: __init__.py  cli.py  feature_nl.csv  similarity.py
tests/: test_cli.py  test_similarity.py
